--- a/web/views/dashboard.ejs
+++ b/web/views/dashboard.ejs
@@ -110,11 +110,11 @@
         <% include ./partials/nav %>
     </div>
     <div class="hero-body">
-        <div class="container is-hidden-mobile">
+        <div class="container is-hidden-mobile" style="margin: auto">
             <div class="columns">
                 <img id="logo" src="/img/icon.png">
                 <div class="column is-9">
-                    <h1 class="title is-1" style="color:#fff;">&bull; TerraBite</h1>
+                    <% include ./partials/title %>
                     <h2 style="margin-top: -1.2rem;">Administration Panel</h2>
                 </div>
             </div>
