--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -1,9 +1,9 @@
 <nav class="nav has-shadow" style="background-color:rgba(0,0,0,0.29)">
     <div class="container">
         <div class="nav-left">
-            <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw">
+            <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw" style="font-family: Montserrat;">
                 <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
-                <span>TerraBite</span>
+                <span><strong>TerraBite</strong> - <i>V &nbsp;<i class="fa fa-angle-double-right" aria-hidden="true" style="padding-top: 3px"></i> 2 Alpha</i></span>
             </a>
         </div>
         <div class="nav-center">
