--- a/web/views/wip.ejs
+++ b/web/views/wip.ejs
@@ -2,33 +2,8 @@
 <html>
     <head>
         <title>TerraBite &bull; WIP</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="oskikiboy">
-        <meta name="description" content="WIP">
 
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="TerraBite">
-        <meta property="og:image" content="assets/img/icon.png">
-        <meta property="og:description" content="WIP">
-
-        <meta name="twitter:title" content="TerraBite">
-        <meta name="twitter:image" content="assets/img/icon.png">
-        <meta name="twitter:description" content="WIP">
-
-        <link rel="shortcut icon" type="image/png" href="/img/icon.png">
-        <meta name="theme-color" content="#551A8B">
-
-        <link rel="stylesheet" href="/discord/icon-discord.css">
-        <link rel="stylesheet" href="/css/bulma.css">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
-        <link rel="icon" href="/img/icon.png">
-
-        <script src="https://use.fontawesome.com/85986a92d7.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="/js/particles.js"></script>
+        <% include ./partials/head %>
     </head>
     <body>
         <section id="header" class="hero is-warning is-fullheight is-bold">
