--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -3,9 +3,9 @@
     background: linear-gradient(45deg, rgba(35, 50, 59, 1) 0%, rgba(95, 88, 128, 1) 100%);
 }
 
-/*CSS by Inventor02*/
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400');
 
-@import url(https://fonts.googleapis.com/css?family=Ubuntu);
+/*CSS by Inventor02 modified by oskikiboy*/
 
 * {
     margin: 0;
@@ -21,7 +21,6 @@ html, body {
 }
 
 body {
-    font-family: "Ubuntu", sans-serif;
     font-size: 21px;
     color: #ECF0F1;
 }
