--- a/web/views/blog.ejs
+++ b/web/views/blog.ejs
@@ -2,34 +2,10 @@
 <html>
     <head>
         <title>TerraBite &bull; Blog</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="oskikiboy">
-        <meta name="description" content="Blog">
 
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="TerraBite">
-        <meta property="og:image" content="assets/img/icon.png">
-        <meta property="og:description" content="Blog">
+        <% include ./partials/head %>
 
-        <meta name="twitter:title" content="TerraBite">
-        <meta name="twitter:image" content="/img/icon.png">
-        <meta name="twitter:description" content="Coming Soon">
-
-        <link rel="shortcut icon" type="image/png" href="/img/icon.png">
-        <meta name="theme-color" content="#551A8B">
-
-        <link rel="stylesheet" href="/discord/icon-discord.css">
-        <link rel="stylesheet" href="/css/bulma.css">
-        <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
-        <link rel="icon" href="/img/icon.png">
-
-        <script src="https://use.fontawesome.com/85986a92d7.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="/js/miny-part/particles.js"></script>
-        <script src="/js/bulma.js"></script>
         <script src="/js/blog.js"></script>
     </head>
     <style type="text/css">
@@ -55,8 +31,6 @@
 
         /*CSS by Inventor02*/
 
-        @import url(https://fonts.googleapis.com/css?family=Ubuntu);
-
         * {
             margin: 0;
             padding: 0;
@@ -67,7 +41,6 @@
         }
 
         body {
-            font-family: "Ubuntu", sans-serif;
             font-size: 21px;
             color: #ECF0F1;
         }
@@ -110,11 +83,11 @@
                 <% include ./partials/nav %>
             </div>
             <div class="hero-body">
-                <div class="container is-hidden-mobile">
+                <div class="container is-hidden-mobile" style="margin: auto">
                     <div class="columns">
                         <img id="logo" src="/img/icon.png">
                         <div class="column is-9">
-                            <h1 class="title is-1" style="color:#fff;">&bull; TerraBite</h1>
+                            <% include ./partials/title %>
                             <h2 style="margin-top: -1.2rem;">The Official <strong>TerraBite</strong> blog.</h2>
                         </div>
                     </div>
