--- a/web/views/error.ejs
+++ b/web/views/error.ejs
@@ -2,39 +2,14 @@
 <html>
     <head>
         <title>TerraBite &bull; Error</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="oskikiboy">
-        <meta name="description" content="Error">
 
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="TerraBite">
-        <meta property="og:image" content="assets/img/icon.png">
-        <meta property="og:description" content="Error">
-
-        <meta name="twitter:title" content="TerraBite">
-        <meta name="twitter:image" content="assets/img/icon.png">
-        <meta name="twitter:description" content="Error">
-
-        <link rel="shortcut icon" type="image/png" href="/img/icon.png">
-        <meta name="theme-color" content="#551A8B">
-
-        <link rel="stylesheet" href="/discord/icon-discord.css">
-        <link rel="stylesheet" href="/css/bulma.css">
-        <link rel="stylesheet" href="/css/custom.css">
-        <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
-        <link rel="icon" href="/img/icon.png">
-
-        <script src="https://use.fontawesome.com/85986a92d7.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="/js/particles.js"></script>
+        <% include ./partials/head %>
     </head>
     <body>
         <section id="header" class="hero is-warning is-fullheight is-bold">
             <div class="hero-head">
                 <a class="nav-item is-brand title is-5 is-active" href="/">
-                    <img src="/img/icon.png" style="border-radius: 3px;">
+                    <img src="/img/icon.png" style="border-radius: 3px;font-family: Montserrat;">
                     &nbsp;
                     <strong>TerraBite</strong>
                 </a>
