--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -20,6 +20,10 @@
             top: 0;
             left: 0;
         }
+
+        * {
+            font-family: 'Raleway', sans-serif;
+        }
     </style>
     <body>
         <div id="particles-js" class="is-hidden-mobile">
