Message to guild owner

--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -159,6 +159,10 @@
         <% include ./partials/foot %>
         <% include ./partials/up %>
         <script src="/js/app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+        <script>
+            var socket = io();
+        </script>
         <!-- <script>
             $(document).ready(function() {
 
