Updated web ~ made things more ordered

--- a/web/views/badLogin.ejs
+++ b/web/views/badLogin.ejs
@@ -170,6 +170,7 @@
 <% } %>
 <% include ./partials/foot %>
 <% include ./partials/up %>
+<% include ./partials/sio %>
 <script src="/js/miny-part/app.js"></script>
 </body>
 </html>
