--- a/web/views/error.ejs
+++ b/web/views/error.ejs
@@ -38,5 +38,6 @@
                         </div>
                 </div>
                 </section>
+        <% include ./partials/sio %>
             </body>
         </html>
