--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -158,11 +158,8 @@
         <% include ./partials/staff %>
         <% include ./partials/foot %>
         <% include ./partials/up %>
+        <% include ./partials/sio %>
         <script src="/js/app.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-        <script>
-            var socket = io();
-        </script>
         <!-- <script>
             $(document).ready(function() {
 
