--- a/web/views/global.ejs
+++ b/web/views/global.ejs
@@ -57,12 +57,11 @@
     #logo {
         height: 150px;
         width: 150px;
-        border-radius: 4px;
-        background: #ecf0f1;
+        border-radius: 6px;
     }
 
     #logo > img {
-        border-radius: 5px;
+        border-radius: 6px;
         width: 100%;
         height: 100%;
     }
@@ -114,6 +113,7 @@
 </section>
 <% include ./partials/foot %>
 <% include ./partials/up %>
+<% include ./partials/sio %>
 <script src="/js/miny-part/app.js"></script>
 </body>
 </html>
