--- a/web/views/policy.ejs
+++ b/web/views/policy.ejs
@@ -5,6 +5,7 @@
 
         <% include ./partials/head %>
     </head>
+    <body>
     <section id="header" class="hero is-dark is-fullheight is-bold">
         <div class="hero-head">
             <a class="nav-item is-brand title is-5 is-active" href="/">
@@ -64,3 +65,6 @@
         </div>
 </div>
     </section>
+    <% include ./partials/sio %>
+    </body>
+</html>
