--- a/web/views/partials/head.ejs
+++ b/web/views/partials/head.ejs
@@ -18,6 +18,7 @@
 
 <link rel="stylesheet" href="/css/bulma.css">
 <link rel="stylesheet" href="/css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
 <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
 <link rel="icon" href="/img/icon.png">
