--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -1,9 +1,9 @@
 <nav class="nav has-shadow" style="background-color:rgba(0,0,0,0.29)">
     <div class="container">
         <div class="nav-left">
-            <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw" style="font-family: Montserrat;">
+            <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw">
                 <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
-                <span><strong>TerraBite</strong> - <i>V &nbsp;<i class="fa fa-angle-double-right" aria-hidden="true" style="padding-top: 3px"></i> 2 Alpha</i></span>
+                <span><span style="font-family: Quicksand;">TerraBite</span> - <span style="font-family: Quicksand;"><i>V &nbsp;<i class="fa fa-angle-double-right" aria-hidden="true" style="padding-top: 3px"></i> 2 Alpha</i></span></span>
             </a>
         </div>
         <div class="nav-center">
@@ -33,38 +33,34 @@
             <a class="nav-item" href="blog" id="nav-blog">
                 Blog
             </a>
-            <div class="field">
-                <p class="control has-icons-left">
-                    <% if(authUser) { %>
-                    <a id="nav-dashboard" class="nav-item is-tab is-active" href="/wip" title="Go to dashboard">
-                        <img class="image is-16x16" src="<%= authUser.avatar %>" style="border-radius: 100%;" alt="<%= authUser.id %>">
-                        &nbsp;
-                        <span><%= authUser.username %></span>
-                    </a>
-                    <% } else { %>
-                <p class="nav-item control has-addons">
-                    <a class="button is-white is-outlined" href="/add">
+            <% if(authUser) { %>
+            <a id="nav-dashboard" class="nav-item is-tab is-active" href="/dashboard" title="Go to dashboard">
+                <img class="image is-16x16" src="<%= authUser.avatar %>" style="border-radius: 100%;" alt="<%= authUser.id %>">
+                &nbsp;
+                <span><%= authUser.username %></span>
+            </a>
+            <% } else { %>
+            <p class="nav-item control has-addons">
+                <a class="button is-white is-outlined" href="/add">
                 <span class="icon is-small">
                     <i class="fa fa-plus"></i>
                 </span>
-                        <span>Add</span>
-                    </a>
-                    <a class="button is-info is-outlined is-iverted" href="<%= support %>" style="margin-left: 0px;">
+                    <span>Add</span>
+                </a>
+                <a class="button is-info is-outlined" href="<%= support %>" style="margin-left: 0px;">
                 <span class="icon is-small">
                     <i class="fa fa-handshake-o"></i>
                 </span>
-                        <span>Support</span>
-                    </a>
-                </p>
-                <% } %>
-                </p>
-            </div>
-            <span class="nav-toggle" id="nav-toggle">
+                    <span>Support</span>
+                </a>
+            </p>
+            <% } %>
+        </div>
+        <span class="nav-toggle" id="nav-toggle">
             <span></span>
             <span></span>
             <span></span>
         </span>
-        </div>
     </div>
 </nav>
 <script>
