--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -155,6 +155,7 @@
                 </div>
             </div>
         </section>
+        <h1 id="uptempo"></h1>
         <% include ./partials/staff %>
         <% include ./partials/foot %>
         <% include ./partials/up %>
