--- a/web/views/partials/head.ejs
+++ b/web/views/partials/head.ejs
@@ -6,11 +6,11 @@
 
 <meta property="og:type" content="website">
 <meta property="og:title" content="TerraBite">
-<meta property="og:image" content="assets/img/icon.png">
+<meta property="og:image" content="/img/banner.png">
 <meta property="og:description" content="<%= title %>">
 
 <meta name="twitter:title" content="TerraBite">
-<meta name="twitter:image" content="/img/icon.png">
+<meta name="twitter:image" content="/img/banner.png">
 <meta name="twitter:description" content="<%= title %>">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon.png">
@@ -21,6 +21,7 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
 <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
+<link rel="stylesheet" href="/fonts/stylesheet.css">
 <link rel="icon" href="/img/icon.png">
 
 
