--- a/web/views/partials/title.ejs
+++ b/web/views/partials/title.ejs
@@ -1,1 +1,6 @@
-<h1 class="title is-1" style="color:#fff;font-family: Montserrat;">&bull; TerraBite</h1>
+<h1 class="title is-1" style="color:#fff;" id="brand-TB">&bull;TerraBite</h1>
+<style>
+    #brand-TB {
+        font-family: 'aaarghnormal', sans-serif;
+    }
+</style>
