--- a/web/views/error.ejs
+++ b/web/views/error.ejs
@@ -1,43 +1,120 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>TerraBite &bull; Error</title>
+<head>
+    <title>TerraBite &bull; Error</title>
 
-        <% include ./partials/head %>
-    </head>
-    <body>
-        <section id="header" class="hero is-warning is-fullheight is-bold">
-            <div class="hero-head">
-                <a class="nav-item is-brand title is-5 is-active" href="/">
-                    <img src="/img/icon.png" style="border-radius: 3px;font-family: Montserrat;">
-                    &nbsp;
-                    <strong>TerraBite</strong>
-                </a>
-            </div>
-            <div class="hero-body">
-                <div class="container has-text-centered">
-                    <h1 class="subtitle is-1"><%= error_code %></h1>
-                    <br>
-                    <h1 class="title is-1">
-                        <strong>Uh-oh</strong>, seems like something went wrong. <h1><br><br/>
-                        </h1>
-                        <p class="hero-buttons">
-                            <a class="button is-primary is-large" href="javascript:window.history.back();">
-                                <span class="icon">
-                                    <i class="fa fa-chevron-left"></i>
-                                </span>
-                                <span>Go back</span>
-                            </a>
-                            <a class="button is-success is-large" href="/">
-                                <span class="icon">
-                                    <i class="fa fa-home"></i>
-                                </span>
-                                <span>Take me home!</span>
-                            </a>
-                        </p>
-                        </div>
+    <% include ./partials/head %>
+
+    <script src="/js/miny-part/particles.js"></script>
+</head>
+<style type="text/css">
+
+    #particles-js {
+        width: 100%;
+        height: 0px;
+        background-color: #1D1D1D;
+        background-image: url('');
+        background-repeat: no-repeat;
+    }
+    .particles-js-canvas-el {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 500px;
+    }
+
+    .banner {
+        background: -webkit-linear-gradient(45deg, rgba(35,50,59,1) 0%, rgba(95,88,128,1) 100%);
+        background: linear-gradient(45deg, rgba(35,50,59,1) 0%, rgba(95,88,128,1) 100%);
+    }
+
+    /*CSS by Inventor02*/
+
+    @import url(https://fonts.googleapis.com/css?family=Ubuntu);
+
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    html, body {
+        height: 100%;
+    }
+
+    body {
+        font-family: "Ubuntu", sans-serif;
+        font-size: 21px;
+        color: #ECF0F1;
+    }
+
+    #container {
+        left: 50%;
+        top: 50%;
+        margin-top: -225px;
+        margin-left: -444px;
+        min-width: 900px;
+        min-height: 330px;
+    }
+
+
+    #logo {
+        height: 150px;
+        width: 150px;
+        border-radius: 6px;
+    }
+
+    #logo > img {
+        border-radius: 6px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .front {
+        z-index: 5000000;
+    }
+    .terrasize {
+        height: 500px;
+    }
+</style>
+<body>
+<div id="particles-js" class="is-hidden-mobile">
+</div>
+<section class="hero is-danger is-medium terrasize" style="z-index: -5;">
+    <div class="hero-head">
+        <% include ./partials/nav %>
+    </div>
+    <div class="hero-body">
+        <div class="container is-hidden-mobile" style="margin: auto">
+            <div class="columns">
+                <img id="logo" src="/img/icon.png">
+                <div class="column is-9">
+                    <% include ./partials/title %>
+                    <h2 style="margin-top: -1.2rem;">Error</h2>
                 </div>
-                </section>
-        <% include ./partials/sio %>
-            </body>
-        </html>
+            </div>
+        </div>
+        <div class="container has-text-centered is-hidden-tablet">
+            <h1 class="title is-1">TerraBite</h1>
+            <h2 class="subtitle is-4">Error</h2>
+        </div>
+    </div>
+</section>
+<section id="header" class="hero is-medium is-bold">
+    <div class="container has-text-centered">
+        <br>
+        <h1 class="subtitle is-1"><%= error_code %></h1>
+        <br>
+        <h1 class="title is-1">
+            <strong>Hmm thats weird</strong>, seems like we hit a dead end.<h1><br><br/>
+            </h1>
+            <br>
+            <h2 class="has-text-dark"><%= error_text %></h2>
+            <br>
+    </div>
+</section>
+<% include ./partials/foot %>
+<% include ./partials/up %>
+<% include ./partials/sio %>
+<script src="/js/miny-part/app.js"></script>
+</body>
+</html>
