--- a/web/views/partials/head.ejs
+++ b/web/views/partials/head.ejs
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="/css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <link rel="stylesheet" href="https://s3.amazonaws.com/icomoon.io/114779/Socicon/style.css?cp0z2c">
 <link rel="stylesheet" href="/fonts/stylesheet.css">
 <link rel="icon" href="/img/icon.png">
