--- a/web/views/partials/title.ejs
+++ b/web/views/partials/title.ejs
@@ -1,6 +1,7 @@
-<h1 class="title is-1" style="color:#fff;" id="brand-TB">&bull;TerraBite</h1>
+<h1 class="title is-1 animated fadeIn" id="brand-TB">&bull;TerraBite</h1>
 <style>
     #brand-TB {
         font-family: 'aaarghnormal', sans-serif;
+        color: #fff;
     }
 </style>
