Removed more GAB crap

--- a/web/views/partials/foot.ejs
+++ b/web/views/partials/foot.ejs
@@ -6,8 +6,6 @@
                 <br>
                 <br>
                 Copyright © The TerraBite Development Group, 2017. All rights reserved.
-                <br>
-                <a href="/paperwork">Privacy Policy</a>
             </p>
             <div>
                 <a class="icon" href="https://discord.gg/NZwzJ9Q" style="bottom: 3px">
@@ -20,7 +18,7 @@
                     <i class="fa fa-github"></i>
                     </span>
                 </a>
-                <a class="icon" href="wip">
+                <a class="icon"onclick="openWIPModal()">
                     <span class="icon " style="padding-bottom: 6px">
                     <i class="fa fa-check"></i>
                     </span>
