--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -12,7 +12,7 @@
                     <i class="fa socicon-discord" aria-hidden="true"></i>
                 </span>
             </a>
-            <a class="nav-item" href="wip">
+            <a class="nav-item" openWIPModal()>
                 <span class="icon">
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </span>
