Game stuff, caps, credits, web

--- a/web/views/index.ejs
+++ b/web/views/index.ejs
@@ -28,7 +28,7 @@
     <body>
         <div id="particles-js" class="is-hidden-mobile">
         </div>
-        <section class="hero is-dark is-fullheight banner" style="z-index: -5;">
+        <section class="hero is-dark is-fullheight banner">
             <div class="hero-head">
                 <% include ./partials/nav %>
             </div>
