--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -3,7 +3,7 @@
         <div class="nav-left">
             <a class="nav-item is-brand" href="https://discordapp.com/invite/JJAy6qw">
                 <img src="/img/icon.png" alt="Logo" style="border-radius: 4px;"> &nbsp;
-                <span><span style="font-family: aaarghnormal;font-size: 15px">TerraBite</span><span class="is-hidden-mobile"> - <span style="font-family: Quicksand;"><i>V &nbsp;<i class="fa fa-angle-double-right" aria-hidden="true" style="padding-top: 3px"></i> 2 Alpha</i></span></span></span>
+                <span><span style="font-family: aaarghnormal;font-size: 15px">TerraBite</span><span class="is-hidden-mobile"> - <span style="font-family: Quicksand;"><i>V &nbsp;<i class="fa fa-angle-double-right" aria-hidden="true" style="padding-top: 3px"></i> 2 Beta</i></span></span></span>
             </a>
         </div>
         <div class="nav-center">
