--- a/web/views/maintenance.ejs
+++ b/web/views/maintenance.ejs
@@ -108,12 +108,9 @@
         <br>
         <h1 class="subtitle is-1">Maintenance</h1>
         <br>
-        <h1 class="title is-1">
-            Come back later!<h1><br><br/>
-            </h1>
-            <br>
-            <h2 class="has-text-dark"><%= message %></h2>
-            <br>
+        <h2 class="subtitle is-2 has-text-dark"><%= message %></h2>
+        <br>
+        <h1 class="title is-1">Come back later!</h1>
     </div>
 </section>
 <% include ./partials/foot %>
