--- a/web/views/partials/nav.ejs
+++ b/web/views/partials/nav.ejs
@@ -17,9 +17,9 @@
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </span>
             </a>
-            <a class="nav-item" href="https://github.com/TerraBite-Development-Team/TerraBite">
+            <a class="nav-item" href="https://gitlab.com/TerraBite/TerraBite">
                 <span class="icon">
-                    <i class="fa fa-github" style="padding-top: 2px;" aria-hidden="true"></i>
+                    <i class="fa fa-gitlab" aria-hidden="true"></i>
                 </span>
             </a>
         </div>
